Fix: Prevent early list wrapping in some cases

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -233,7 +233,7 @@ html {
 
 @media (min-width: 48.125em) {
     .backdropCard {
-        width: 32%;
+        width: 31%;
     }
 }
 
